# rc-car

./: Cargo.toml  add-lock.patch  commands.gdb  defmt-print.nix  flake.nix  rust-toolchain.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: communication.rs  lib.rs  rc_filter.rs
comunication/: Cargo.toml
comunication/src/: lib.rs  types.rs
mainboard/: Cargo.toml  serwo_holder.scad
mainboard/.cargo/: config.toml
mainboard/src/: ble_terminal.rs  cli.rs  communication_manager.rs  main.rs  motor_control.rs  motor_driver.rs  motor_manager.rs  pwm_split.rs  serwo_holder.3mf  serwo_holder.stl
pilot/: Cargo.toml  pilot_case.scad  pilot_case.stl
pilot/src/: joystick.rs  main.rs
src/: main.rs
xtask/src/: main.rs
