[package]
edition = "2021"
name = "rc-car"
version = "0.1.0"
authors = ["WJKPK <krupskiwojciech@gmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "integrated-timers"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

esp-hal = { version = "0.17.0", features = ["log"] }
esp-backtrace = { version = "0.11.1", features = ["exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.9.1", features = ["log", "defmt-espflash"]}

[features]
esp32c3= ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
async = ["esp-hal/async"]
embassy = ["esp-hal/embassy"]
embassy-executor-thread    = ["esp-hal/embassy-executor-thread"]
embassy-time-timg0 = ["esp-hal/embassy-time-timg0"]
default = ["esp32c3", "async", "embassy", "embassy-executor-thread", "embassy-time-timg0"]
