[package]
edition = "2021"
name = "rc-car-mainboard"
version = "0.1.0"
authors = ["WJKPK <krupskiwojciech@gmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "integrated-timers"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

esp-hal = { version = "0.18.0", features = ["log"] }
esp-hal-embassy = { version = "0.1.0" }
esp-backtrace = { version = "0.13.0", features = ["exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.10.0", features = ["log", "defmt-espflash"]}
esp-wifi = { version = "0.6.0"}

static_cell         = { version = "2.0.0", features = ["nightly"] }
portable-atomic =     { version = "1.7.0", default-features = false }
heapless = "0.8.0"
fugit = "0.3.7"
array-init = "2.1.0"

[features]
esp32c3= ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
esp-wifi = ["esp-wifi/esp32c3", "esp-wifi/async", "esp-wifi/embassy-net", "esp-wifi/wifi-default", "esp-wifi/wifi", "esp-wifi/utils", "esp-wifi/esp-now"]
async = ["esp-hal/async"]
embassy = ["esp-hal-embassy/esp32c3"]
embassy-time-timg0 = ["esp-hal-embassy/time-timg0"]
default = ["esp32c3", "async", "embassy", "embassy-time-timg0", "esp-wifi"]

