[package]
edition = "2021"
name = "rc-car-mainboard"
version = "0.1.0"
authors = ["WJKPK <krupskiwojciech@gmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async", "mtu256"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-5120", "integrated-timers"] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }

esp-hal = { version = "0.21.1", features = ["log"] }
esp-hal-embassy = { version = "0.4.0" }
esp-backtrace = { version = "0.14.2", features = ["exception-handler", "panic-handler", "defmt", "custom-halt"] }
esp-println = { version = "0.9.1", features = ["log", "defmt-espflash"]}
esp-wifi = { version = "0.10.1"}
esp-alloc = { version = "0.5.0"}

embassy-futures = { version = "0.1.1" }

static_cell         = { version = "2.0.0", features = ["nightly"] }
portable-atomic =     { version = "1.7.0", default-features = false }
heapless = "0.8.0"
fugit = "0.3.7"
common = { path = "../common" }
num-traits = { version = "0.2.19", default-features = false }
strum = { version = "0.26.2", default-features = false , features = ["derive"] }
strum_macros = { version = "0.26.3" }

embedded-cli = "0.2.1"
embedded-io = "0.6.1"
ufmt = "0.2.0"
embedded-alloc = "0.6.0"

[features]
esp32c3= ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
esp-wifi = ["esp-wifi/esp32c3", "esp-wifi/async", "esp-wifi/embassy-net", "esp-wifi/wifi-default", "esp-wifi/wifi", "esp-wifi/utils", "esp-wifi/esp-now", "esp-wifi/ble", "esp-wifi/coex"]
embassy = ["esp-hal-embassy/esp32c3"]
default = ["esp32c3", "embassy", "esp-wifi"]

